crates/tokmd-format/tests/snapshots/format_snapshot_w58__w58_lang_md_embedded_collapse.snap
---
source: crates/tokmd-format/tests/format_snapshot_w58.rs
expression: "render_lang(&report, TableFormat::Md)"
---
|Lang|Code|Lines|Files|Bytes|Tokens|Avg|
|---|---:|---:|---:|---:|---:|---:|
|HTML|1050|1300|8|31500|10500|162|
|**Total**|1050|1300|8|31500|10500|162|
